# Banking-System-Desktop

./: CMakeLists.txt  backend.cpp  backend.h  createwallet.cpp  createwallet.h  createwallet.ui  history.cpp  history.h  history.ui  homewindow.cpp  homewindow.h  homewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sendform.cpp  sendform.h  sendform.ui
NodeServer/: .env  package-lock.json  package.json  server.js
